# adminui

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  fake_socket.py  main.py  pyproject.toml
.github/workflows/: Publish.yaml
src/adminui/: __about__.py  constants.py  context.py  frontend.py  hostbridge.py  optional.py  setup.py  utils.py  wifi.py
src/adminui/auth/: __init__.py  session.py  views.py
src/adminui/static/: admin-dashboard.js
src/adminui/templates/: base.html  home.html  raw_base.html  reboot_required.html  rebooting.html
src/adminui/templates/auth/: login.html
src/adminui/templates/optional/: config.html
src/adminui/templates/wifi/: config.html
